--- a/options.html
+++ b/options.html
@@ -43,7 +43,6 @@
     Remove marketing tags from URLs
   </label>
 </div>
-<script src="defaults.js"></script>
-<script src="options.js"></script>
+<script type="module" src="options.js"></script>
 </body>
 </html>
